# flutter_biometric_signature

./: .pubignore  CHANGELOG.md  EXAMPLES.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: main.yml
android/: build.gradle  proguard-rules.pro
banking_app/ios/Runner.xcodeproj/: project.pbxproj
banking_app/lib/screens/: history_screen.dart  home_screen.dart  transfer_screen.dart
banking_app/lib/services/: biometric_service.dart
banking_app/macos/Runner.xcodeproj/: project.pbxproj
banking_app/windows/: CMakeLists.txt
banking_app/windows/runner/: Runner.rc  main.cpp
document_signer/ios/Runner.xcodeproj/: project.pbxproj
document_signer/lib/screens/: document_detail_screen.dart  home_screen.dart
document_signer/lib/services/: document_service.dart  signature_service.dart
document_signer/macos/Flutter/: GeneratedPluginRegistrant.swift
document_signer/macos/Runner.xcodeproj/: project.pbxproj
document_signer/windows/: CMakeLists.txt
document_signer/windows/flutter/: generated_plugin_registrant.cc
document_signer/windows/runner/: Runner.rc  main.cpp
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: biometric_signature.podspec
ios/Classes/: BiometricSignatureApi.swift  BiometricSignaturePlugin.swift
ios/biometric_signature/: Package.swift
lib/: biometric_signature.dart  biometric_signature_method_channel.dart  biometric_signature_platform_interface.dart  biometric_signature_platform_interface.pigeon.dart  biometric_signature_windows.dart  decryption_options.dart  macos_config.dart  signature_options.dart
macos/: biometric_signature.podspec
macos/Classes/: BiometricSignatureApi.swift  BiometricSignaturePlugin.swift
macos/biometric_signature/: Package.swift
passwordless_login/: README.md
passwordless_login/ios/Runner.xcodeproj/: project.pbxproj
passwordless_login/lib/models/: user.dart
passwordless_login/lib/screens/: home_screen.dart  login_screen.dart  register_screen.dart  settings_screen.dart
passwordless_login/lib/services/: auth_service.dart
passwordless_login/macos/Runner/: DebugProfile.entitlements  (+1 more)
passwordless_login/macos/Runner.xcodeproj/: project.pbxproj
passwordless_login/windows/: CMakeLists.txt
pigeons/: messages.dart
scripts/: generate_pigeon.sh
test/: biometric_signature_test.dart
windows/: CMakeLists.txt  biometric_signature_plugin.cpp  biometric_signature_plugin.h  biometric_signature_plugin_c_api.cpp  messages.g.cpp  messages.g.h
windows/include/biometric_signature/: biometric_signature_plugin.h  biometric_signature_plugin_c_api.h
(+25 files in other folders)
